--- a/public/index.css
+++ b/public/index.css
@@ -16,6 +16,10 @@
     font-weight: 800;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     margin: 0;
 }
@@ -23,6 +27,7 @@ body {
 h1, h2, h3, a, p {
     font-family: 'Inter', sans-serif;
     margin: 0;
+    color: #2A2C30;
 }
 
 h1, h2, h3 {
@@ -33,6 +38,17 @@ a, p {
     margin-bottom: 1rem;
 }
 
-.container {
-    margin: auto;
+a {
+    transition: 0.15s ease-in-out;
+}
+
+a:hover {
+    color: #626876;
+    transition: 0.15s ease-in-out;
+}
+
+#__next {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
