--- a/public/index.scss
+++ b/public/index.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 @font-face {
     font-family: 'Inter';
     src: url('./inter/Inter-Regular.woff') format('woff');
@@ -27,7 +29,7 @@ body {
 h1, h2, h3, a, p {
     font-family: 'Inter', sans-serif;
     margin: 0;
-    color: #2A2C30;
+    color: $base;
 }
 
 h1, h2, h3 {
@@ -39,12 +41,13 @@ a, p {
 }
 
 a {
-    transition: 0.15s ease-in-out;
+    transition: $transition;
+    text-decoration: none;
 }
 
 a:hover {
-    color: #626876;
-    transition: 0.15s ease-in-out;
+    color: $hover;
+    transition: $transition;
 }
 
 #__next {
