--- a/components/LandingText/landingtext.module.scss
+++ b/components/LandingText/landingtext.module.scss
@@ -1,5 +1,6 @@
 #textContainer {
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 #main {
@@ -8,4 +9,15 @@
 
 #subtext {
   font-size: 2rem;
+  margin: 0;
+}
+
+@media (max-width: 1024px) {
+  #main {
+    font-size: 2rem;
+  }
+  
+  #subtext {
+    font-size: 1.5rem;
+  }
 }
