--- a/components/Page/page.module.scss
+++ b/components/Page/page.module.scss
@@ -11,18 +11,15 @@
 
 #footerContainer {
   margin: 2rem; 
-  text-align: center; 
-  flex-shrink: 0;
-}
-
-#footerIcons {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
 }
 
 .icon {
   height: 1rem;
   width: auto;
-  margin: 0 0.25rem;
   fill: #2A2C30;
+  margin: 0 0.5rem;
 }
