--- a/components/HomePageContent/homepagecontent.module.scss
+++ b/components/HomePageContent/homepagecontent.module.scss
@@ -1,10 +1,10 @@
-#home {
+#container {
     flex: 1 0 auto;
     min-height: auto;
     margin: 0 2rem;
 }
 
-#homeInner {
+#inner {
     height: 100%;
     display: flex;
     flex-direction: column;
