--- a/components/Upload/upload.module.scss
+++ b/components/Upload/upload.module.scss
@@ -1,6 +1,6 @@
 @import '../../public/variables';
 
-#infoContainer {
+#infoWrapper {
   padding: 2rem 4rem;
   border: 0.25rem solid $base;
   box-sizing: border-box;
@@ -9,19 +9,19 @@
   transition: $transition;
 }
 
-#infoContainer:hover {
+#infoWrapper:hover {
   transform: scale(1.02);
   transition: $transition;
 }
 
-#uploadContainer {
+#uploadWrapper {
   padding: 2rem 4rem;
   border: 0.25rem solid $base;
   box-sizing: border-box;
   border-radius: 1rem;
 }
 
-#textContainer {
+#textWrapper {
   text-align: center;
 }
 
@@ -48,7 +48,7 @@
 }
 
 @media (max-width: 450px) {
-  #infoContainer {
+  #infoWrapper {
     padding: 1rem 2rem;
   }
 }
