--- a/public/_variables.scss
+++ b/public/_variables.scss
@@ -13,3 +13,8 @@ $lgray: #8C8D96;
 $dgray: #53535C;
 $black: #20232A;
 $transition: 0.15s ease-in-out;
+$border: 2rem;
+$sm-border: 1rem;
+$xs-border: 0.75rem;
+$mobile: 992px;
+$sm-mobile: 768px;
