--- a/components/TrackPageContent/trackpagecontent.module.scss
+++ b/components/TrackPageContent/trackpagecontent.module.scss
@@ -1,3 +1,17 @@
+@import '../../public/variables';
+
 #container {
-    padding: 0 2rem;
+    margin: 0 $border;
+}
+
+@media (max-width: $mobile) {
+    #container {
+        margin: 0 $sm-border;
+    }
+}
+
+@media (max-width: $sm-mobile) {
+    #container {
+        margin: 0 $xs-border;
+    }
 }
