--- a/components/HomePageContent/homepagecontent.module.scss
+++ b/components/HomePageContent/homepagecontent.module.scss
@@ -14,8 +14,40 @@
     justify-content: center;
 }
 
+#textWrapper {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+#main {
+    font-size: 2.5rem;
+}
+
+#subtext {
+    font-size: 2rem;
+    margin: 0;
+}
+
+@media (max-width: $mobile) {
+    #main {
+        font-size: 2rem;
+    }
+      
+    #subtext {
+        font-size: 1.6rem;
+    }
+}
+
 @media (max-width: $sm-mobile) {
     #container {
         margin: 0 $sm-border;
+    }
+
+    #main {
+        font-size: 1.5rem;
+    }
+      
+    #subtext {
+        font-size: 1.2rem;
     }
 }
