--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,12 +9,14 @@ $green: #71C074;
 $blue: #5DA9D3;
 $purple: #9E79DB;
 $pink: #E06ED5;
-$lgray: #8C8D96;
-$dgray: #53535C;
+$gray: #53535C;
 $black: #20232A;
+
 $transition: 0.15s ease-in-out;
+
 $border: 2rem;
 $sm-border: 1rem;
 $xs-border: 0.75rem;
+
 $mobile: 1024px;
 $sm-mobile: 768px;
