revised styles, added context folder

--- a/components/Page/index.module.scss
+++ b/components/Page/index.module.scss
@@ -29,7 +29,7 @@
   fill: $base;
 }
 
-@media (max-width: $sm-mobile) {
+@media (max-width: $mobile) {
   #headerWrapper, #footerWrapper {
     margin: $sm-border;
   }
