--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -15,8 +15,8 @@ $black: #20232A;
 $transition: 0.15s ease-in-out;
 
 $border: 2rem;
-$sm-border: 1rem;
-$xs-border: 0.75rem;
+$sm-border: 1.5rem;
+$xs-border: 1rem;
 
-$mobile: 1024px;
-$sm-mobile: 768px;
+$tablet: 1024px;
+$mobile: 480px;
