--- a/scenes/Home/index.module.scss
+++ b/scenes/Home/index.module.scss
@@ -16,29 +16,29 @@
 
 #textWrapper {
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
 }
 
-#main {
-    font-size: 2.5rem;
-}
-
-#subtext {
+#mainText {
     font-size: 2rem;
+}
+
+#subText {
+    font-size: 1.5rem;
     margin: 0;
 }
 
-@media (max-width: $mobile) {
+@media (max-width: $tablet) {
     #main {
-        font-size: 2rem;
+        font-size: 1.75rem;
     }
       
     #subtext {
-        font-size: 1.6rem;
+        font-size: 1.25rem;
     }
 }
 
-@media (max-width: $sm-mobile) {
+@media (max-width: $mobile) {
     #container {
         margin: 0 $sm-border;
     }
