--- a/scenes/Track/components/Player/index.module.scss
+++ b/scenes/Track/components/Player/index.module.scss
@@ -105,7 +105,7 @@ $btnSize: 5.5rem;
     margin: 0;
 }
 
-@media (max-width: $mobile) {
+@media (max-width: $tablet) {
     $btnSize: 4.5rem;
     
     #playButton {
@@ -122,8 +122,6 @@ $btnSize: 5.5rem;
     }
 
     #track {
-        padding: 1rem $sm-border;
-        margin: 0 (-$sm-border);
         height: 120px;
     }
 
@@ -136,7 +134,7 @@ $btnSize: 5.5rem;
     }
 }
 
-@media (max-width: $sm-mobile) {
+@media (max-width: $mobile) {
     $btnSize: 3.5rem;
     
     #playButton {
@@ -149,8 +147,8 @@ $btnSize: 5.5rem;
     }
 
     #track {
-        padding: $xs-border $xs-border;
-        margin: 0 (-$xs-border);
+        padding: $sm-border $sm-border;
+        margin: 0 (-$sm-border);
         height: 100px;
     }
 
