--- a/styles/index.scss
+++ b/styles/index.scss
@@ -8,7 +8,7 @@ body {
     margin: 0;
 }
 
-h1, h2, h3, a, p {
+h1, h2, h3, a, p, div, button {
     font-family: 'Inter', sans-serif;
     margin: 0;
     color: $base;
