--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
 
 html, body {
     height: 100%;
