--- a/src/components/Button/index.module.scss
+++ b/src/components/Button/index.module.scss
@@ -1,10 +1,10 @@
 .button {
+  background: none;
+  border: 1px solid #2a2c30;
+  border-radius: 0.5rem;
+  box-sizing: border-box;
   cursor: pointer;
+  font-size: 1.2rem;
   outline: none;
   padding: 0.2rem 1rem;
-  box-sizing: border-box;
-  font-size: 1.2rem;
-  border-radius: 0.5rem;
-  background: none; 
-  border: 1px solid #2A2C30;
 }
