--- a/src/scenes/Home/index.module.scss
+++ b/src/scenes/Home/index.module.scss
@@ -1,53 +1,49 @@
 @import '../../styles/variables';
 
 #container {
-    flex: 1 0 auto;
-    min-height: auto;
-    margin: 0 $border;
+  flex: 1 0 auto;
+  margin: 0 $border;
+  min-height: auto;
+
+  @include M {
+    margin: 0 $sm-border;
+  }
 }
 
 #inner {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
 }
 
 #textWrapper {
-    text-align: center;
-    margin-bottom: 4rem;
+  margin-bottom: 4rem;
+  text-align: center;
 }
 
 #mainText {
-    font-size: 2rem;
+  font-size: 2rem;
+
+  @include T {
+    font-size: 1.75rem;
+  }
+
+  @include M {
+    font-size: 1.5rem;
+  }
 }
 
 #subText {
-    font-size: 1.5rem;
-    margin: 0;
-}
+  font-size: 1.5rem;
+  margin: 0;
 
-@media (max-width: $tablet) {
-    #main {
-        font-size: 1.75rem;
-    }
-      
-    #subtext {
-        font-size: 1.25rem;
-    }
-}
+  @include T {
+    font-size: 1.25rem;
+  }
 
-@media (max-width: $mobile) {
-    #container {
-        margin: 0 $sm-border;
-    }
-
-    #main {
-        font-size: 1.5rem;
-    }
-      
-    #subtext {
-        font-size: 1.2rem;
-    }
+  @include M {
+    font-size: 1.2rem;
+  }
 }
