--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,40 +1,50 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap');
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
-h1, h2, h3, a, p, div, button {
-    font-family: 'Inter', sans-serif;
-    margin: 0;
-    color: $base;
+h1,
+h2,
+h3,
+a,
+p,
+div,
+button {
+  font-family: 'Inter', sans-serif;
+  margin: 0;
+  color: $base;
 }
 
-h1, h2, h3 {
-    margin-bottom: 0.5rem;
+h1,
+h2,
+h3 {
+  margin-bottom: 0.5rem;
 }
 
-a, p {
-    margin-bottom: 1rem;
+a,
+p {
+  margin-bottom: 1rem;
 }
 
 a {
-    transition: $transition;
-    text-decoration: none;
+  transition: $transition;
+  text-decoration: none;
 }
 
 a:hover {
-    color: $hover;
-    transition: $transition;
+  color: $hover;
+  transition: $transition;
 }
 
 #__next {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
