--- a/src/scenes/Track/components/Player/index.module.scss
+++ b/src/scenes/Track/components/Player/index.module.scss
@@ -4,7 +4,7 @@ $btnSize: 5.5rem;
 $btnSizeT: 4.5rem;
 $btnSizeM: 3.5rem;
 
-#track {
+.track {
   align-items: center;
   display: flex;
   height: 140px;
@@ -58,13 +58,13 @@ $btnSizeM: 3.5rem;
   background-color: $black;
 }
 
-#loadingText {
+.loadingText {
   color: white;
   font-weight: bold;
   margin: 0;
 }
 
-#waveformWrapper {
+.waveformWrapper {
   flex-grow: 1;
 }
 
@@ -84,7 +84,7 @@ $btnSizeM: 3.5rem;
   }
 }
 
-#playButton {
+.playButton {
   align-items: center;
   background: none;
   border: white solid 2px;
@@ -108,7 +108,7 @@ $btnSizeM: 3.5rem;
   }
 }
 
-#playButton:hover {
+.playButton:hover {
   transform: scale(1.05);
   transition: $transition;
 
@@ -117,7 +117,7 @@ $btnSizeM: 3.5rem;
   }
 }
 
-#icon {
+.icon {
   height: $btnSize * 0.8;
 
   @include T {
@@ -144,7 +144,7 @@ $btnSizeM: 3.5rem;
   }
 }
 
-#progressTime {
+.progressTime {
   color: white;
   font-size: 1rem;
   font-weight: bold;
