--- a/src/scenes/Home/components/Upload/index.module.scss
+++ b/src/scenes/Home/components/Upload/index.module.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles/variables';
 
-.infoWrapper {
+.infoContainer {
   border: 0.25rem solid $base;
   border-radius: 1rem;
   box-sizing: border-box;
@@ -14,19 +14,19 @@
   }
 }
 
-.infoWrapper:hover {
+.infoContainer:hover {
   transform: scale(1.02);
   transition: $transition;
 }
 
-.uploadWrapper {
+.uploadContainer {
   border: 0.25rem solid $base;
   border-radius: 1rem;
   box-sizing: border-box;
   padding: 2rem 4rem;
 }
 
-.textWrapper {
+.textContainer {
   text-align: center;
 }
 
