--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,8 @@
 $base: #2a2c30;
 $hover: #525761;
 $inputDefault: #8d919a;
-$inputFill: #f0f0f0;
+$inputFill: #eeeeee;
+$inputFocusFill: #f3f3f3;
 $red: #ef626c;
 $orange: #efa662;
 $yellow: #edcf66;
