--- a/src/scenes/Track/components/TrackEdit/index.module.scss
+++ b/src/scenes/Track/components/TrackEdit/index.module.scss
@@ -27,24 +27,30 @@
   margin: 0;
 }
 
-.input {
+.input,
+.select {
   background-color: $inputFill;
   border: none;
   border-radius: 0.5rem;
   box-sizing: border-box;
   font-size: 1rem;
+  margin-left: 0.6rem;
   outline: none;
   padding: 0.375rem 0.75rem;
 }
 
-.input:focus {
+.input:focus .select:active {
   background-color: $inputFocusFill;
 }
 
 .titleInput {
+  margin: 0;
   width: 100%;
 }
 
+.expireInput {
+  width: 4rem;
+}
+
 .select {
-  font-size: 1rem;
 }
