--- a/src/scenes/Track/components/Player/index.module.scss
+++ b/src/scenes/Track/components/Player/index.module.scss
@@ -58,6 +58,10 @@ $btnSizeM: 3.5rem;
   background-color: $black;
 }
 
+.white {
+  background-color: white;
+}
+
 .loadingText {
   color: white;
   font-weight: bold;
