--- a/src/scenes/404/index.module.scss
+++ b/src/scenes/404/index.module.scss
@@ -6,11 +6,17 @@
   flex-direction: column;
   height: 100%;
   justify-content: center;
+  padding: $border;
+  text-align: center;
 }
 
 .mainText {
   font-size: 6rem;
   letter-spacing: -0.05em;
+
+  @include M {
+    font-size: 5rem;
+  }
 }
 
 .subText {
